# spark_airflow

./: README.md  pyproject.toml
dags/: pyspark_movie.py
pyspark/: agg_movie.py  join_df.py
src/spark_airflow/: rep.py
tests/: test_rep.py
